feat: enable virtual threads for I/O-bound tasks